--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -132,6 +132,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+        <ProgressBar
+            android:visibility="invisible"
+            android:id="@+id/progressBarLogin"
+            android:padding="10dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_below="@id/pass_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/forgot_password"
         android:textColor="@color/textColor"
