--- a/app/src/main/res/layout/fragment_forgot.xml
+++ b/app/src/main/res/layout/fragment_forgot.xml
@@ -54,5 +54,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <ProgressBar
+        android:id="@+id/forgotProgress"
+        android:visibility="invisible"
+        android:padding="10dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_below="@id/text_forgot_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 
 </RelativeLayout>
