--- a/app/src/main/res/layout/confirm_layout.xml
+++ b/app/src/main/res/layout/confirm_layout.xml
@@ -1,16 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:layout_centerVertical="true"
-    android:layout_centerInParent="true"
-    android:layout_centerHorizontal="true"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="350dp"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_gravity="center">
+
+    <android.support.v7.widget.CardView
+        app:cardCornerRadius="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
 
     <ImageView
+        android:id="@+id/question"
+        android:layout_margin="24dp"
+        android:layout_gravity="center"
         android:src="@drawable/sual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-</android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/lorem"
+            android:padding="10dp"
+            android:textSize="18sp"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:text="@string/lorem"
+            android:textColor="#868FA2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/main_question"
+            android:padding="15dp"
+            android:textColor="#02182F"
+            android:textAlignment="center"
+            android:textSize="22sp"
+            android:text="@string/tesdiq"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_margin="10dp"
+            android:weightSum="2"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btnLegv"
+                android:layout_margin="5dp"
+                android:textAllCaps="false"
+                android:textSize="16sp"
+                android:text="@string/l_v_et"
+                android:textColor="@color/white"
+                android:background="@drawable/custom2"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/btnTesdqi"
+                android:layout_margin="5dp"
+                android:textSize="16sp"
+                android:textAllCaps="false"
+                android:text="@string/t_sdiql"
+                android:textColor="@color/white"
+                android:background="@drawable/custom"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+    </android.support.v7.widget.CardView>
+</RelativeLayout>
