--- a/app/src/main/res/layout/all_clients.xml
+++ b/app/src/main/res/layout/all_clients.xml
@@ -11,11 +11,19 @@
         android:textAllCaps="true"
         android:padding="16dp"
         android:textSize="16sp"
-        android:gravity="center"
+        android:gravity="start"
         android:text="@string/digital_media"
         android:textColor="@color/white"
         android:background="@drawable/buttons"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <ImageView
+        android:id="@+id/infoB"
+        android:padding="16dp"
+        android:layout_gravity="end|center"
+        android:src="@drawable/ic_info_black_24dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </FrameLayout>
