--- a/app/src/main/res/layout/client_info.xml
+++ b/app/src/main/res/layout/client_info.xml
@@ -144,10 +144,9 @@
     <!--</android.support.design.widget.TextInputLayout>-->
 
     <Button
-        android:id="@+id/changenBtn"
+        android:id="@+id/buttonChange"
         android:padding="15dp"
         android:textAllCaps="false"
-        android:enabled="false"
         android:textSize="16sp"
         android:textColor="@color/white"
         android:text="Change"
