--- a/app/src/main/res/layout/client_info.xml
+++ b/app/src/main/res/layout/client_info.xml
@@ -157,4 +157,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <ProgressBar
+        android:id="@+id/changeProgress"
+        android:visibility="gone"
+        android:indeterminate="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_below="@id/text_layout_info_site"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
