--- a/app/src/main/res/layout/activity_first_home.xml
+++ b/app/src/main/res/layout/activity_first_home.xml
@@ -93,4 +93,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/clientAddFab"
+        app:fabSize="normal"
+        android:backgroundTint="#6C727C"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        android:src="@drawable/ic_add_white_24dp"
+        app:rippleColor="@color/deactive"
+        android:layout_margin="15dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
