--- a/app/src/main/res/layout/client_info.xml
+++ b/app/src/main/res/layout/client_info.xml
@@ -15,6 +15,7 @@
             android:id="@+id/edtCompanyNameInfo"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
+            android:inputType="text"
             android:textColorHint="@color/textColor"
             android:textColor="@color/textColor"
             android:hint="@string/irk_tin_ad"
@@ -34,6 +35,7 @@
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/edtAdminNameInfo"
             android:hint="@string/m_sul_xs"
+            android:inputType="textPersonName"
             android:textColor="@color/textColor"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
@@ -52,6 +54,7 @@
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/edtMailInfoTel"
             android:layout_marginStart="10dp"
+            android:inputType="phone"
             android:layout_marginEnd="10dp"
             android:textColorHint="@color/textColor"
             android:textColor="@color/textColor"
@@ -74,6 +77,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:textColorHint="@color/textColor"
+            android:inputType="textEmailAddress"
             android:textColor="@color/textColor"
             android:hint="@string/mail"
             android:textSize="16sp"
@@ -92,6 +96,7 @@
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/edtMailInfoAddress"
             android:layout_marginStart="10dp"
+            android:inputType="textPostalAddress"
             android:layout_marginEnd="10dp"
             android:textColorHint="@color/textColor"
             android:textColor="@color/textColor"
@@ -114,6 +119,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:textColorHint="@color/textColor"
+            android:inputType="text"
             android:textColor="@color/textColor"
             android:hint="@string/sayt"
             android:textSize="16sp"
