--- a/app/src/main/res/layout/activity_succes.xml
+++ b/app/src/main/res/layout/activity_succes.xml
@@ -8,13 +8,14 @@
 
     <ImageView
         android:id="@+id/doneLog"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="200dp"
         android:layout_centerHorizontal="true"
         android:src="@drawable/donelog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:textAlignment="center"
         android:id="@+id/cong"
         android:textColor="#02182F"
         android:textSize="26sp"
