--- a/app/src/main/res/layout/confirm_layout.xml
+++ b/app/src/main/res/layout/confirm_layout.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="325dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center">
 
     <android.support.v7.widget.CardView
+
         app:cardCornerRadius="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -19,7 +20,7 @@
 
     <ImageView
         android:id="@+id/question"
-        android:layout_margin="24dp"
+        android:layout_margin="14dp"
         android:layout_gravity="center"
         android:src="@drawable/sual"
         android:layout_width="wrap_content"
@@ -28,7 +29,7 @@
         <TextView
             android:id="@+id/lorem"
             android:padding="10dp"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textAlignment="center"
             android:layout_gravity="center"
             android:text="@string/lorem"
@@ -41,7 +42,7 @@
             android:padding="15dp"
             android:textColor="#02182F"
             android:textAlignment="center"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:text="@string/tesdiq"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -80,5 +81,13 @@
         </LinearLayout>
 
     </LinearLayout>
+        <ProgressBar
+            android:visibility="invisible"
+            android:indeterminate="true"
+            android:id="@+id/addPostProgress"
+            android:layout_marginBottom="15dp"
+            android:layout_gravity="bottom|center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </android.support.v7.widget.CardView>
 </RelativeLayout>
