--- a/app/src/main/res/layout/client_info.xml
+++ b/app/src/main/res/layout/client_info.xml
@@ -5,9 +5,19 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
+    <Spinner
+        android:id="@+id/spinnerPaketsInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown" />
+
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_layout_info"
+        android:layout_below="@+id/spinnerPaketsInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
