--- a/app/src/main/res/layout/client_info.xml
+++ b/app/src/main/res/layout/client_info.xml
@@ -1,210 +1,226 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-    <Spinner
-        android:id="@+id/spinnerPaketsInfo"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-
-        android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown" />
+        android:padding="16dp">
 
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_layout_info"
-        android:layout_below="@+id/spinnerPaketsInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/edtCompanyNameInfo"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:inputType="text"
-            android:textColorHint="@color/textColor"
-            android:textColor="@color/textColor"
-            android:hint="@string/irk_tin_ad"
-            android:textSize="16sp"
+        <LinearLayout
+            android:weightSum="2"
+            android:orientation="horizontal"
+            android:id="@+id/layss"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
 
 
-    </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_weight="2"
+            android:id="@+id/text_layout_info"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/spinnerPaketsInfo">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_layout_info_password"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/text_layout_info"
-        android:layout_height="wrap_content">
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/edtCompanyNameInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:hint="@string/irk_tin_ad"
+                android:inputType="text"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
+                android:textSize="16sp" />
 
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/edtPasswordInfo"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:inputType="textPassword"
-            android:textColorHint="@color/textColor"
-            android:textColor="@color/textColor"
-            android:hint="@string/passHintInfo"
-            android:textSize="16sp"
+
+        </android.support.design.widget.TextInputLayout>
+
+            <Spinner
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:id="@+id/spinnerPaketsInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:spinnerMode="dropdown" />
+
+        </LinearLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_layout_info_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layss">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/edtPasswordInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:hint="@string/passHintInfo"
+                android:inputType="textPassword"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
+                android:textSize="16sp" />
 
 
-    </android.support.design.widget.TextInputLayout>
+        </android.support.design.widget.TextInputLayout>
 
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/adminname_layout_info"
-        android:layout_below="@id/text_layout_info_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/edtAdminNameInfo"
-            android:hint="@string/m_sul_xs"
-            android:enabled="false"
-            android:inputType="textPersonName"
-            android:textColor="@color/textColor"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:textSize="16sp"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/adminname_layout_info"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_layout_info_password">
 
-    </android.support.design.widget.TextInputLayout>
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/edtAdminNameInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:enabled="false"
+                android:hint="@string/m_sul_xs"
+                android:inputType="textPersonName"
+                android:textColor="@color/textColor"
+                android:textSize="16sp" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_layout_info_tel"
-        android:layout_below="@id/adminname_layout_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        </android.support.design.widget.TextInputLayout>
 
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/edtMailInfoTel"
-            android:layout_marginStart="10dp"
-            android:inputType="phone"
-            android:layout_marginEnd="10dp"
-            android:textColorHint="@color/textColor"
-            android:textColor="@color/textColor"
-            android:hint="@string/laq_n_mr_si"
-            android:textSize="16sp"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_layout_info_tel"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/adminname_layout_info">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/edtMailInfoTel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:hint="@string/laq_n_mr_si"
+                android:inputType="phone"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
+                android:textSize="16sp" />
 
 
-    </android.support.design.widget.TextInputLayout>
+        </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_layout_info_mail"
-        android:layout_below="@id/text_layout_info_tel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/edtMailInfomail"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:textColorHint="@color/textColor"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/textColor"
-            android:hint="@string/mail"
-            android:textSize="16sp"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_layout_info_mail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_layout_info_tel">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/edtMailInfomail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:hint="@string/mail"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
+                android:textSize="16sp" />
 
 
-    </android.support.design.widget.TextInputLayout>
+        </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_layout_info_address"
-        android:layout_below="@id/text_layout_info_mail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/edtMailInfoAddress"
-            android:layout_marginStart="10dp"
-            android:inputType="textPostalAddress"
-            android:layout_marginEnd="10dp"
-            android:textColorHint="@color/textColor"
-            android:textColor="@color/textColor"
-            android:hint="@string/nvan"
-            android:textSize="16sp"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_layout_info_address"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_layout_info_mail">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/edtMailInfoAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:hint="@string/nvan"
+                android:inputType="textPostalAddress"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
+                android:textSize="16sp" />
 
 
-    </android.support.design.widget.TextInputLayout>
+        </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_layout_info_site"
-        android:layout_below="@id/text_layout_info_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/edtMailInfoSite"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:textColorHint="@color/textColor"
-            android:inputType="text"
-            android:textColor="@color/textColor"
-            android:hint="@string/sayt"
-            android:textSize="16sp"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_layout_info_site"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_layout_info_address">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/edtMailInfoSite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:hint="@string/sayt"
+                android:inputType="text"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
+                android:textSize="16sp" />
 
 
-    </android.support.design.widget.TextInputLayout>
+        </android.support.design.widget.TextInputLayout>
 
-    <!--<android.support.design.widget.TextInputLayout-->
+        <!--<android.support.design.widget.TextInputLayout-->
         <!--android:id="@+id/text_layout_info_type"-->
         <!--android:layout_below="@id/text_layout_info_site"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content">-->
 
         <!--<android.support.v7.widget.AppCompatEditText-->
-            <!--android:id="@+id/edtMailInfoType"-->
-            <!--android:layout_marginStart="24dp"-->
-            <!--android:layout_marginEnd="24dp"-->
-            <!--android:textColorHint="@color/textColor"-->
-            <!--android:textColor="@color/textColor"-->
-            <!--android:hint="Paketin Növü"-->
-            <!--android:textSize="20sp"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content" />-->
+        <!--android:id="@+id/edtMailInfoType"-->
+        <!--android:layout_marginStart="24dp"-->
+        <!--android:layout_marginEnd="24dp"-->
+        <!--android:textColorHint="@color/textColor"-->
+        <!--android:textColor="@color/textColor"-->
+        <!--android:hint="Paketin Növü"-->
+        <!--android:textSize="20sp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
 
 
-    <!--</android.support.design.widget.TextInputLayout>-->
+        <!--</android.support.design.widget.TextInputLayout>-->
 
-    <Button
-        android:id="@+id/buttonChange"
-        android:padding="15dp"
-        android:textAllCaps="false"
-        android:textSize="16sp"
-        android:textColor="@color/white"
-        android:text="Change"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/blue_button"
-        android:layout_below="@id/text_layout_info_site"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/buttonChange"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_layout_info_site"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/blue_button"
+            android:padding="15dp"
+            android:text="Change"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
-    <ProgressBar
-        android:id="@+id/changeProgress"
-        android:visibility="gone"
-        android:indeterminate="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_below="@id/text_layout_info_site"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <ProgressBar
+            android:id="@+id/changeProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_layout_info_site"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:indeterminate="true"
+            android:visibility="gone" />
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</ScrollView>
